examples/cpp/failing/field_visibility_conflict/ExpectedIdeally.cc
class MyClass {
    public:
        int field_1;
<<<<<<< LEFT
    private:
        size_t field_2;
||||||| BASE
=======
        char field_3;
>>>>>>> RIGHT
};
